Fix x overflow

--- a/src/sass/elements/_posts.scss
+++ b/src/sass/elements/_posts.scss
@@ -51,3 +51,8 @@ article{
         padding-bottom: 50%;
     }
 }
+
+section{
+    max-width: 100vw;
+    overflow: hidden;
+}
